# Grabby-McArmface

./: Grabby_McArmface_text_read_write  README.md  wit_handler.py
grabby_mcarmface_arduino/SDcard_test/: SDcard_test.ino
grabby_mcarmface_arduino/Servo_Control_1/: Servo_Control_1.ino
grabby_mcarmface_arduino/Servo_Control_2/: Servo_Control_2.ino
grabby_mcarmface_ros/: CMakeLists.txt  package.xml
grabby_mcarmface_ros/include/grabby_mcarmface_ros/: serialNode.h
grabby_mcarmface_ros/launch/: serialNode.launch
grabby_mcarmface_ros/msg/: ServoAngleArray.msg
grabby_mcarmface_ros/params/: serialNode.yaml
grabby_mcarmface_ros/scripts/: face_tracker.py  wit_handler.py
grabby_mcarmface_ros/src/: serialNode.cpp
grabby_mcarmface_ros/srv/: TurnOnMic.srv
